@@ -6,6 +6,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.locationtech.jts.algorithm.Distance;
@@ -276,7 +277,7 @@ public class SegmentVoronoiIndex {
 			}
 
 			return results.stream();
-		}).toList();
+		}).collect(Collectors.toList());
 
 		cellBlobs.forEach(cb -> cellIndex.insert(cb.e, cb));
 	}
